LPS-97203 Add sorting to Data Definition Page endpoint

--- a/modules/apps/data-engine/data-engine-rest-impl/build.gradle
+++ b/modules/apps/data-engine/data-engine-rest-impl/build.gradle
@@ -22,6 +22,7 @@ dependencies {
 	compileOnly project(":apps:frontend-js:frontend-js-loader-modules-extender-api")
 	compileOnly project(":apps:oauth2-provider:oauth2-provider-scope-api")
 	compileOnly project(":apps:portal-odata:portal-odata-api")
+	compileOnly project(":apps:portal-search:portal-search-api")
 	compileOnly project(":apps:portal-template:portal-template-soy-api")
 	compileOnly project(":apps:portal-template:portal-template-soy-renderer-api")
 	compileOnly project(":apps:portal-vulcan:portal-vulcan-api")
