--- a/modules/package.json
+++ b/modules/package.json
@@ -1,5 +1,6 @@
 {
 	"devDependencies": {
+		"@babel/preset-react": "7.0.0",
 		"alloy-ui": "^3.1.0-deprecated.40",
 		"babel-plugin-incremental-dom": "3.4.0",
 		"compass-mixins": "0.12.10",
