--- a/modules/apps/app-builder/app-builder-web/build.gradle
+++ b/modules/apps/app-builder/app-builder-web/build.gradle
@@ -6,4 +6,5 @@ dependencies {
 	compileOnly group: "javax.servlet", name: "javax.servlet-api", version: "3.0.1"
 	compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.3.0"
 	compileOnly project(":apps:application-list:application-list-api")
+	compileOnly project(":apps:frontend-taglib:frontend-taglib")
 }
