--- a/modules/apps/app-builder/app-builder-web/package.json
+++ b/modules/apps/app-builder/app-builder-web/package.json
@@ -1,6 +1,8 @@
 {
 	"dependencies": {
+		"@clayui/data-provider": "^3.0.0-milestone.1",
 		"@clayui/pagination": "^3.0.0-milestone.1",
+		"@clayui/select": "^3.0.0-milestone.1",
 		"@clayui/table": "^3.0.0-milestone.1",
 		"axios": "^0.19.0",
 		"moment": "^2.24.0",
