--- a/modules/apps/app-builder/app-builder-web/src/main/resources/content/Language.properties
+++ b/modules/apps/app-builder/app-builder-web/src/main/resources/content/Language.properties
@@ -1,5 +1,8 @@
 app-builder=App Builder
 are-you-sure-you-want-to-delete-it-permanently=Deleting a custom object cannot be undone and may affect published apps. Are you sure you want to delete it permanently?
-javax.portlet.title.com_liferay_app_builder_web_internal_portlet_AppBuilderPortlet=App Builder
-there-are-no-custom-objects-yet=There are no custom objects yet.
-there-are-no-form-views-yet=There are no form views yet.
+create-one-or-more-forms-to-display-the-data-held-in-your-data-object=Create one or more forms to display the data held in your data object.
+custom-objects-define-the-types-of-data-your-business-application-needs=Custom Objects define the types of data your business application needs.
+javax.portlet.description.com_liferay_app_builder_web_internal_portlet_CustomObjectsPortlet=Create business apps backed by new data structures (objects), then deploy them as administrative applications, widgets, or standalone apps.
+javax.portlet.title.com_liferay_app_builder_web_internal_portlet_CustomObjectsPortlet=Custom Objects
+no-custom-objects-yet=No Custom Objects yet.
+no-form-views-yet=No Form Views yet.
