--- a/modules/apps/app-builder/app-builder-web/package.json
+++ b/modules/apps/app-builder/app-builder-web/package.json
@@ -3,6 +3,7 @@
 		"@clayui/data-provider": "^3.0.0-milestone.1",
 		"@clayui/drop-down": "^3.0.0-milestone.1",
 		"@clayui/icon": "^3.0.0-milestone.1",
+		"@clayui/loading-indicator": "^3.0.0-milestone.1",
 		"@clayui/pagination": "^3.0.0-milestone.1",
 		"@clayui/table": "^3.0.0-milestone.1",
 		"axios": "^0.19.0",
