--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language.properties
@@ -223,6 +223,8 @@ options-field-type-label=Options
 or=OR
 other-field=Other field
 output-parameters=Output Parameters
+page-title=Page title
+page-x-of-x=Page {0} of {1}
 paragraph-field-type-description=Add a title and/or a body text in your form.
 paragraph-field-type-label=Paragraph
 parameter=Parameter
@@ -253,6 +255,7 @@ radio-field-type-label=Single Selection
 record=Record
 regular-expression=Regular expression
 remove-field=Remove Field
+remove-page=Remove Page
 remove-success-page=Remove Success Page
 require=Require
 require-x=Require {0}
@@ -306,6 +309,7 @@ template-key-help=The template key can be used to include this template programm
 templates-for-structure-x=Templates for Structure: {0}
 text-field-type-description=Single line or multi-line text area.
 text-field-type-label=Text
+thank-you=Thank You!
 the-autosave-interval-must-be-greater-than-or-equal-to-0=The autosave interval must be greater than or equal to 0.
 the-data-provider-cannot-be-deleted-because-it-is-required-by-one-or-more-forms=The data provider cannot be deleted because it is required by one or more forms.
 the-definition-field-name-x-was-defined-more-than-once=The definition field name {0} was defined more than once.
@@ -373,3 +377,4 @@ you-have-entered-invalid-json=You have entered invalid JSON.
 you-need-to-be-signed-in-to-view-this-form=You need to be signed in to view this form.
 you-will-also-delete-fields-with-this-row-are-you-sure-you-want-delete-it=You will also delete fields with this row. Are you sure you want delete it?
 your-information-was-successfully-received-thanks-for-fill-out=Your information was successfully received. Thank you for filling out the form.
+your-responses-have-been-submitted=Your responses have been submitted.
