--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language.properties
@@ -95,6 +95,7 @@ ddm-template-service-help=Provides the remote service for accessing, adding, cop
 ddmweb-configuration-name=Dynamic Data Mapping Web
 define-condition-and-action-to-change-fields-and-elements-on-the-form=Define conditions and actions to change fields and elements on the form.
 delete-action=Delete action?
+delete-all-entries=Delete All Entries
 delete-condition=Delete condition?
 delete-current-page=Delete Current Page
 delete-field-dialog-title=Delete field?
@@ -138,14 +139,15 @@ enter-the-parameter=Enter the parameter.
 enter-the-path=Enter the path.
 enter-the-rest-service-url=Enter the REST service URL.
 enter-time-in-milliseconds=Enter time in milliseconds.
+export-all-entries=Export All Entries
 expression=Expression
-fieldset-field-type-label=Fields Group
 field-name-is-already-in-use=Field name is already in use.
 field-types-basic-elements=Basic Elements
 field-types-customized-elements=Customized Elements
 field-types-sidebar-title=Add Elements
 field-validation-failed=A custom field validation failed.
 field-visibility-expression=Field Visibility Expression
+fieldset-field-type-label=Fields Group
 filter-parameter-name=Filter Parameter Name
 form-entries=Form Entries
 form-settings=Form Settings
@@ -155,6 +157,7 @@ from-data-provider=From Data Provider
 ftl[stands-for]=FreeMarker
 geolocation-field-type-description=Select a location from a map.
 geolocation-field-type-label=Geolocation
+get-email-notifications=Get Email Notifications
 grid-field-type-description=Select options from a matrix.
 grid-field-type-label=Grid
 help-text=Help Text
@@ -187,6 +190,7 @@ json[stands-for]=JSON
 jump-to-page=Jump to Page
 jump-to-page-x=Jump to Page {0}
 keyword=Keyword
+last-entry-sent-x-ago=Last entry sent {0} ago
 leave-form=Leave form?
 leave-page=Leave
 manage-templates=Manage Templates
