--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-form-web/package.json
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-form-web/package.json
@@ -8,13 +8,16 @@
 		"clay-modal": "2.21.2",
 		"clay-radio": "2.21.2",
 		"clipboard": "2.0.4",
+		"frontend-js-react-web": "*",
+		"frontend-js-web": "*",
 		"metal-dom": "2.16.8",
 		"metal-drag-drop": "3.3.1",
 		"metal-events": "2.16.8",
 		"metal-jsx": "2.16.8",
 		"metal-position": "2.1.2",
 		"metal-state": "2.16.8",
-		"object-hash": "^1.3.0"
+		"object-hash": "^1.3.0",
+		"react": "16.12.0"
 	},
 	"jest": {
 		"moduleNameMapper": {
