--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language.properties
@@ -69,6 +69,7 @@ copy-templates=Copy Templates
 copy-this-url-to-share-the-form=Copy this URL to share the form.
 copy-url=Copy URL
 copy-x=Copy {0}
+create-and-publish-a-form-to-start-collecting-data=Create and publish a form to start collecting data.
 create-list=Create List
 csv-warning-message=This CSV file contains user supplied inputs. Opening a CSV file in a spreadsheet program may be dangerous.
 data-provider-error=It is not possible to use the selected Data Provider because it does not contain an output. Go to Data Provider settings to configure its output or select another one.
@@ -332,6 +333,7 @@ there-are-no-data-providers=There are no data providers.
 there-are-no-element-sets=There are no element sets. Click on the plus button to add the first one.
 there-are-no-element-sets-yet=There are no element sets yet.
 there-are-no-forms=There are no forms. Click on the plus button to add the first one.
+there-are-no-forms-yet=There are no forms yet.
 there-are-no-rules-yet-click-on-plus-icon-below-to-add-the-first=There are no rules yet. Click on plus icon below to add the first.
 there-are-no-templates=There are no templates.
 there-are-no-x=There are no {0}.
